# python-keyctl

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  make-readme-toc.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
keyctl/: __init__.py  key.py  keyctlwrapper.py
keyctl/gui/: __init__.py  _gui.py  addkey.ui  gui.py  keylist.ui  main.py
tests/: test_key.py  test_keyctlwrapper.py
