[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
keyctl = ["gui/*.ui"]

[project]
name = "keyctl"
version = "0.5"
authors = [
    {name="Martin", email="tuxberlin@gmail.com"},
]
description = "Wrapper to use keyctl command in Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Environment :: X11 Applications :: Qt",
    "Topic :: Utilities",
]

[project.optional-dependencies]
gui = ["PySide6"]

[project.gui-scripts]
keyctlgui = "keyctl.gui:main"

[project.urls]
repository = "https://github.com/tuxberlin/python-keyctl"
bug-tracker = "https://github.com/tuxberlin/python-keyctl/issues"
